<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <FrameLayout
            android:id="@+id/content_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tabLayout" >

        </FrameLayout>

        <ImageView
            android:id="@+id/connectionIndicator"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/connecting"
            android:src="@drawable/circle_red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvServerMessage" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/loading_indicator"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="5dp"
            android:elevation="8dp"
            android:indeterminate="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/connectionIndicator" />

        <Button
            android:id="@+id/scan_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:onClick="scan"
            android:text="@string/camera_scan_button_label"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/scanningIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:src="@drawable/ic_baseline_grid_goldenratio_24"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/on_off_switch"
            app:layout_constraintEnd_toStartOf="@id/listeningIndicator"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/listeningIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_hearing_24"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/scanningIndicator"
            tools:visibility="visible" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/on_off_switch"
            app:layout_constraintStart_toEndOf="@+id/connectionIndicator"
            app:layout_constraintTop_toTopOf="@id/connectionIndicator">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_tab_name" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabLog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_tab_name" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_tab_name" />
        </com.google.android.material.tabs.TabLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/on_off_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textOff="@string/off"
            android:textOn="@string/on"
            android:contentDescription="on off switch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tabLayout"
            app:layout_constraintTop_toTopOf="@id/tabLayout"
            app:showText="true" />

        <TextView
            android:id="@+id/tvServerMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@+id/scanningIndicator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>